fixed spacing of bigButton

--- a/main.css
+++ b/main.css
@@ -137,7 +137,7 @@ a {
 	width: 33%;
 	height: 300px;
 	position: fixed;
-	top: 26%;
+	top: 24%;
 	left: 33%;
 	color: #CF6D65;
 	text-align: center;
